--- a/package.json
+++ b/package.json
@@ -49,5 +49,10 @@
     "typescript": "^5.4.5",
     "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.3.9"
-  }
+  },
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/NeverVane/html-email-preview.git"
+}
+
 }
