--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "@vscode/test-electron": "^2.3.9"
   },
   "repository": {
-  "type": "git",
-  "url": "https://github.com/NeverVane/html-email-preview.git"
-}
-
+    "type": "git",
+    "url": "https://github.com/NeverVane/html-email-preview.git"
+  },
+  "dependencies": {
+    "axios": "^1.7.2"
+  }
 }
